--- a/package.json
+++ b/package.json
@@ -12,12 +12,6 @@
   "dependencies": {
     "axios": "^1.7.9",
     "fs": "^0.0.1-security",
-    "repo": "file:",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
-  },
-  "devDependencies": {
-    "@types/node": "^22.10.1"
+    "repo": "file:"
   }
 }
