--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
-    "chalk": "^4.1.2",
-    "repo": "file:"
+    "chalk": "^4.1.2"
   }
 }
