--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "unzip": "^0.1.11"
   }
 }
