--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "chalk": "^4.1.2",
-    "tar-fs": "^3.0.8",
+    "tar-extract": "^0.0.1",
     "unbzip2-stream": "^1.4.3",
     "unzip": "^0.1.11"
   }
