--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -2,6 +2,7 @@ name: Bug Report
 description: Report an issue to help us improve
 title: "[BUG] Brief description"
 labels: ["bug"]
+assignees: 'expxx'
 body:
   - type: markdown
     attributes:
